# SymboSLAM-Simulation

./: README.md
Control_Agent/ontology/: SymboSLAM.owl  SymboSLAM.properties
Control_Agent/src/: __init__.py  agent_comms.py  comms.py  global_map.py  main.py  map_structs.py  read_file.py  save_maps.py  semantics_engine.py  show_map.py  sim_test.py
Edge_Agent/Random_search/: CMakeLists.txt
Edge_Agent/Random_search/comms_logs/: logfile_11.txt  logfile_13.txt  logfile_20.txt  logfile_21.txt  logfile_22.txt  logfile_23.txt  logfile_24.txt  logfile_63.txt  logfile_64.txt  logfile_65.txt
Edge_Agent/Random_search/include/: Local_Map.h  Random_Drive.h  Random_Drive_V2.h  Wall_follow.h  comms.h  read_file.h  save_maps.h
Edge_Agent/Random_search/src/: Random_Drive.cpp  Random_Drive_V2.cpp  Wall_follow.cpp  comms.cpp  main.cpp  read_file.cpp  save_maps.cpp
Sims/ACT_Sim/: !!DEPRECIATED!!_ACT_Full.sim  !!DEPRECIATED!!_ACT_Sim_01_bush.sim  !!DEPRECIATED!!_ACT_Sim_01_military.sim  !!DEPRECIATED!!_ACT_Sim_01_mitchell_area.sim  !!DEPRECIATED!!_ACT_Sim_01_palmerston_area.sim  !!DEPRECIATED!!_ACT_Sim_01_towncentre.sim  ACT_Sim_01_seg_00.sim  ACT_Sim_01_seg_01.sim  ACT_Sim_01_seg_02.sim  ACT_Sim_01_seg_03.sim  ACT_Sim_01_seg_10.sim  ACT_Sim_01_seg_11.sim  ACT_Sim_01_seg_12.sim  ACT_Sim_01_seg_13.sim  ACT_Sim_01_seg_20.sim  ACT_Sim_01_seg_21.sim  ACT_Sim_01_seg_22.sim  ACT_Sim_01_seg_23.sim  ACT_Sim_01_seg_30.sim  ACT_Sim_01_seg_31.sim  ACT_Sim_01_seg_32.sim  ACT_Sim_01_seg_33.sim  ACT_Sim_02_airport.sim  ACT_Sim_02_fyshwick.sim  ACT_Sim_02_kingston_foresore.sim  ACT_Sim_02_trainyard.sim  ACT_Sim_03_city.sim  buffer.sim  fyshwick.sim  obj_test.sim  sim02_airport_aircraft.sim  sim02_airport_houses.sim  sim02_airport_trees.sim  sim02_kingston_commercial.sim  sim02_trainstation.sim  sim03_city_buildings.sim  sim03_city_parks.sim  sim03_residential.sim  test.sim
Sims/environment_objects/: README.txt
Sims/names/: SymboSLAM.names
Sims/objects/: README.txt
Sims/oracle_files/: oracle-13.txt  oracle-14.txt  oracle-16.txt  oracle-7.txt
Sims/simulated_objects_eyesim_tests_sims/: README.txt
Sims/start_loc/: ROBOT_LOC.txt  ROBOT_LOC_tst_16.txt  ROBOT_LOC_tst_5.txt  ROBOT_LOC_tst_7.txt  ROBOT_LOC_tst_8.txt
Sims/worlds/: !!DEPRECIATED!!ACT_sim_1_world.wld  ACT_Sim_02_airport.wld  (+28 more)
(+166 files in other folders)
